--- a/TODO
+++ b/TODO
@@ -32,6 +32,6 @@
   Status: Never notify the user about out-of-tree scripts that are
   already installed. On -current, use a list of obsoleted scripts
   (renamed and added to Slackware, or known to be an unnecessary build-
-  time dependency). There are about thirty of these at present. The
-  list is installed to /etc/sbotools and will be updated on the sbotools
-  home page as necessary.
+  time dependency). There are over forty of these at present. The list
+  is installed to /etc/sbotools and will be updated on the sbotools home
+  page as necessary.
