--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -727,6 +727,15 @@ script cannot be found (where required).
 .RS
 13: circular dependencies detected.
 .RE
+.RS
+14: in
+.B
+batch
+or
+.B
+dry-run\fR\
+\&, required user or group missing.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
