--- a/man3/SBO::Lib.3
+++ b/man3/SBO::Lib.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib 3"
-.TH SBO::Lib 3 "Setting Orange, Discord 12, 3191 YOLD" "" "sbotools 3.5"
+.TH SBO::Lib 3 "Prickle-Prickle, Discord 46, 3191 YOLD" "" "sbotools 3.5"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -121,6 +121,7 @@ The sbotools share the following exit codes:
 \&  _ERR_NOCONVERTPKG  11  lacking convertpkg\-compat32 when needed
 \&  _ERR_INST_SIGNAL   12  the script was interrupted while building
 \&  _ERR_CIRCULAR      13  attempted to calculate a circular dependency
+\&  _ERR_USR_GRP       14  a required user or group is missing
 .Ve
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
