Exit code improvements.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -244,6 +244,9 @@ can exit with the following codes:
 1: a usage error occurred.
 .RE
 .RS
+2: a script or module error occurred.
+.RE
+.RS
 5: failed to download the tree.
 .RE
 .RS
@@ -251,6 +254,9 @@ can exit with the following codes:
 .RE
 .RS
 12: interrupt signal received.
+.RE
+.RS
+15: GPG verification failed.
 .RE
 .SH BUGS
 .P
