--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -207,6 +207,9 @@ can exit with the following codes:
 1: a usage error occurred.
 .RE
 .RS
+2: a script or module error occurred.
+.RE
+.RS
 6:
 .B
 sbohints
