--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -87,7 +87,11 @@ sboremove
 with nothing to remove.
 .RE
 .RS
+2: a script or module error occurred.
+.RE
+.RS
 13: circular dependencies detected.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
