Download.pm: Generalize URI escape handling.

--- a/THANKS
+++ b/THANKS
@@ -51,6 +51,7 @@ iluvatar1 (reported an .info parse bug)
 januscan (requested strict version-up)
 jonasdemoor (requested download beavior documentation)
 leoctrl (reported sbofind case insensitivity)
+lockywolf (originally reported the URI escape filename bug)
 montagdude (reported sboinstall and sbosnap bugs)
 na3i09 (reported a compat32 sboremove bug)
 penduin (reported a Slackware -current version bug)
