Make README.md shorter.

--- a/THANKS
+++ b/THANKS
@@ -64,6 +64,6 @@ wgreenhouse (reported the local git repo chown bug)
 
 This file is almost certainly incomplete; information about pre-fork
 sbotools is limited, and oversights do happen. Please contact me if you
-should be in this file (or README.md) and you are not:
+should be in this file (or ChangeLog.md) and you are not:
 
   K. Eugene Carlson <kvngncrlsn@gmail.com>
