--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -183,6 +183,22 @@ also occur when the build number differs.
 .RE
 .P
 .B
+ETC_PROFILE=(FALSE|TRUE)
+.RS
+.B
+If
+.B
+TRUE\fR\
+\&, source any executable scripts in
+.I
+/etc/profile.d
+named
+.I
+*.sh
+before running each SlackBuild in the build queue.
+.RE
+.P
+.B
 OBSOLETE_CHECK=(FALSE|TRUE)
 .RS
 If
