--- a/man3/SBO::Lib::Build.3
+++ b/man3/SBO::Lib::Build.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Build 3"
-.TH SBO::Lib::Build 3 "Boomtime, Discord 64, 3191 YOLD" "" "sbotools 3.6"
+.TH SBO::Lib::Build 3 "Pungenday, Discord 65, 3191 YOLD" "" "sbotools 3.6"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -77,7 +77,7 @@ SBO::Lib::Build \- Routines for building Slackware packages from SlackBuilds.org
 This is a shared array that tracks scripts with verified
 completable build queues; it is used by \f(CWget_build_queue()\fR to check for
 circular dependencies. Note that \f(CW@concluded\fR is cleared
-by \f(CW\*(C`sbofind\*(C'\fR between results.
+by \f(CW\*(C`sbofind\*(C'\fR and \f(CW\*(C`sboremove\*(C'\fR between results.
 .ie n .SS $env_tmp
 .el .SS \f(CW$env_tmp\fP
 .IX Subsection "$env_tmp"
@@ -89,7 +89,7 @@ set.
 This is a shared array that tracks scripts with verified
 reverse dependency chains; it is used by \f(CWget_full_reverse()\fR to check for
 circular reverse dependencies. Note that \f(CW@reverse_concluded\fR is cleared
-by \f(CW\*(C`sbofind\*(C'\fR between results.
+by \f(CW\*(C`sbofind\*(C'\fR and \f(CW\*(C`sboremove\*(C'\fR between results.
 .ie n .SS $tempdir
 .el .SS \f(CW$tempdir\fP
 .IX Subsection "$tempdir"
