Util.pm: Error out when prompt can't read input.

--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -145,7 +145,10 @@ sboclean\fR\
 .RE
 .RS
 2: a script or module error occurred.
-
+.RE
+.RS
+16: reading keyboard input failed.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
