--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -466,6 +466,9 @@ can exit with the following codes:
 sboconfig
 was unable to obtain a required file handle.
 .RE
+.RS
+16: reading keyboard input failed.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
