--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -115,6 +115,9 @@ with nothing to remove.
 .RS
 13: circular dependencies detected.
 .RE
+.RS
+16: reading keyboard input failed.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
