--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -163,6 +163,9 @@ was unable to obtain a required file handle.
 .RS
 13: circular dependencies detected.
 .RE
+.RS
+16: reading keyboard input failed.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
