--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -215,6 +215,9 @@ can exit with the following codes:
 sbohints
 was unable to obtain a required file handle.
 .RE
+.RS
+16: reading keyboard input failed.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
