--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -818,6 +818,9 @@ dry-run\fR\
 .RS
 15: GPG verification failed.
 .RE
+.RS
+16: reading keyboard input failed.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
